Add MultiBodyConfig class and ForwardKinematic function.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
-set(SOURCES MultiBodyGraph.cpp MultiBody.cpp)
-set(HEADERS Body.h Joint.h MultiBodyGraph.h MultiBody.h)
+set(SOURCES MultiBodyGraph.cpp MultiBody.cpp MultiBodyConfig.cpp FK.cpp)
+set(HEADERS Body.h Joint.h MultiBodyGraph.h MultiBody.h MultiBodyConfig.h
+  FK.h)
 
 pkg_check_modules(EIGEN3 REQUIRED eigen3)
 find_path(SVA_INCLUDE_DIRS SpaceVecAlg/SpaceVecAlg
