--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -28,3 +28,7 @@ add_test(MultiBodyTestUnit MultiBodyTest)
 add_executable(AlgoTest AlgoTest.cpp)
 target_link_libraries(AlgoTest ${Boost_LIBRARIES} RBDyn)
 add_test(AlgoTestUnit AlgoTest)
+
+add_executable(JacobianTest JacobianTest.cpp)
+target_link_libraries(JacobianTest ${Boost_LIBRARIES} RBDyn)
+add_test(JacobianTestUnit JacobianTest)
