--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,14 +25,14 @@ add_executable(MultiBodyTest MultiBodyTest.cpp)
 target_link_libraries(MultiBodyTest ${Boost_LIBRARIES} RBDyn)
 add_test(MultiBodyTestUnit MultiBodyTest)
 
-add_executable(AlgoTest AlgoTest.cpp)
-target_link_libraries(AlgoTest ${Boost_LIBRARIES} RBDyn)
-add_test(AlgoTestUnit AlgoTest)
+#add_executable(AlgoTest AlgoTest.cpp)
+#target_link_libraries(AlgoTest ${Boost_LIBRARIES} RBDyn)
+#add_test(AlgoTestUnit AlgoTest)
 
-add_executable(JacobianTest JacobianTest.cpp)
-target_link_libraries(JacobianTest ${Boost_LIBRARIES} RBDyn)
-add_test(JacobianTestUnit JacobianTest)
+#add_executable(JacobianTest JacobianTest.cpp)
+#target_link_libraries(JacobianTest ${Boost_LIBRARIES} RBDyn)
+#add_test(JacobianTestUnit JacobianTest)
 
-add_executable(DynamicsTest DynamicsTest.cpp)
-target_link_libraries(DynamicsTest ${Boost_LIBRARIES} RBDyn)
-add_test(DynamicsUnit DynamicsTest)
+#add_executable(DynamicsTest DynamicsTest.cpp)
+#target_link_libraries(DynamicsTest ${Boost_LIBRARIES} RBDyn)
+#add_test(DynamicsUnit DynamicsTest)
