Fix Inverse Dynamics test.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,6 +33,6 @@ add_executable(JacobianTest JacobianTest.cpp)
 target_link_libraries(JacobianTest ${Boost_LIBRARIES} RBDyn)
 add_test(JacobianTestUnit JacobianTest)
 
-#add_executable(DynamicsTest DynamicsTest.cpp)
-#target_link_libraries(DynamicsTest ${Boost_LIBRARIES} RBDyn)
-#add_test(DynamicsUnit DynamicsTest)
+add_executable(DynamicsTest DynamicsTest.cpp)
+target_link_libraries(DynamicsTest ${Boost_LIBRARIES} RBDyn)
+add_test(DynamicsUnit DynamicsTest)
