Use jrl-cmake submodule.
For now, the project won't compile, due to wrong header
inclusion.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,33 @@
 cmake_minimum_required(VERSION 2.8)
-project(RBDyn)
+
+INCLUDE(cmake/base.cmake)
+# INCLUDE(cmake/boost.cmake)
+INCLUDE(cmake/cpack.cmake)
+INCLUDE(cmake/eigen.cmake)
+
+SET(PROJECT_NAME RBDyn)
+SET(PROJECT_DESCRIPTION "...")
+SET(PROJECT_URL "https://github.com/jorisv//Tasks")
+
+# Disable -Werror on Unix for now.
+SET(CXX_DISABLE_WERROR True)
+
+SETUP_PROJECT()
 
 option(PYTHON_BINDING "Generate python binding." ON)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++0x -pedantic")
 
-find_package(PkgConfig REQUIRED)
+#########################
+# External dependencies
+# set(BOOST_COMPONENTS unit_test_framework) 
+# SEARCH_FOR_BOOST()
+SEARCH_FOR_EIGEN()
+
+ADD_REQUIRED_DEPENDENCY("SpaceVecAlg")
+
+#########################
+# 
 
 add_subdirectory(src)
 add_subdirectory(tests)
@@ -13,3 +35,10 @@ add_subdirectory(tests)
 if(${PYTHON_BINDING})
   add_subdirectory(binding/python)
 endif()
+
+# Add dependency towards the library in the pkg-config file.
+PKG_CONFIG_APPEND_LIBS(RBDyn)
+
+SETUP_PROJECT_FINALIZE()
+SETUP_PROJECT_CPACK()
+
