--- a/binding/python/CMakeLists.txt
+++ b/binding/python/CMakeLists.txt
@@ -1,10 +1,5 @@
-pkg_check_modules(EIGEN3 REQUIRED eigen3)
 find_package(PythonInterp REQUIRED)
 find_package(PythonLibs REQUIRED)
-
-find_path(SVA_INCLUDE_DIRS SpaceVecAlg/SpaceVecAlg
-                           /usr/include
-                           /usr/local/include)
 
 # create the package in build dir for testing purpose
 set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/rbdyn)
@@ -23,11 +18,10 @@ add_custom_command (
 set(SOURCES ${OUTPUT_BINDING})
 include_directories(.)
 include_directories(../../src)
-include_directories(${EIGEN3_INCLUDE_DIRS})
 include_directories(${PYTHON_INCLUDE_DIRS})
-include_directories(${SVA_INCLUDE_DIRS}/SpaceVecAlg)
 
 add_library(_rbdyn SHARED ${SOURCES})
+PKG_CONFIG_USE_DEPENDENCY(_rbdyn SpaceVecAlg)
 target_link_libraries(_rbdyn RBDyn)
 set_target_properties(_rbdyn PROPERTIES PREFIX "")
 
