Change the way the install path for python file is determined.

--- a/binding/python/CMakeLists.txt
+++ b/binding/python/CMakeLists.txt
@@ -1,5 +1,14 @@
-find_package(PythonInterp REQUIRED)
-find_package(PythonLibs REQUIRED)
+INCLUDE(../../cmake/python.cmake)
+FINDPYTHON()
+
+## Define PYTHON_DISTLIB
+EXECUTE_PROCESS(
+  COMMAND "${PYTHON_EXECUTABLE}" "-c"
+  "import sys, os; print os.sep.join(['lib', 'python' + sys.version[:3], 'dist-packages'])"
+  OUTPUT_VARIABLE PYTHON_DISTLIB
+  ERROR_QUIET)
+# Remove final \n of the variable PYTHON_DISTLIB
+STRING(REPLACE "\n" "" PYTHON_DISTLIB "${PYTHON_DISTLIB}")
 
 # create the package in build dir for testing purpose
 set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/rbdyn)
@@ -26,15 +35,6 @@ target_link_libraries(_rbdyn RBDyn)
 set_target_properties(_rbdyn PROPERTIES PREFIX "")
 
 # install rules
-# find python version (not implemented in cmake 2.8.5)
-execute_process(COMMAND "${PYTHON_EXECUTABLE}" -V ERROR_VARIABLE _VERSION
-                OUTPUT_QUIET ERROR_STRIP_TRAILING_WHITESPACE)
-string(REPLACE "Python " "" PYTHON_VERSION_STRING "${_VERSION}")
-string(REGEX REPLACE "^([0-9]+)\\.[0-9]+\\.[0-9]+.*" "\\1"
-       PYTHON_VERSION_MAJOR "${PYTHON_VERSION_STRING}")
-string(REGEX REPLACE "^[0-9]+\\.([0-9])+\\.[0-9]+.*" "\\1"
-       PYTHON_VERSION_MINOR "${PYTHON_VERSION_STRING}")
-
-set(INSTALL_PATH "lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/dist-packages/rbdyn/")
+set(INSTALL_PATH "${PYTHON_DISTLIB}/rbdyn/")
 install(TARGETS _rbdyn DESTINATION ${INSTALL_PATH})
 install(FILES __init__.py DESTINATION ${INSTALL_PATH})
