--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 INCLUDE(cmake/base.cmake)
-# INCLUDE(cmake/boost.cmake)
+INCLUDE(cmake/boost.cmake)
 INCLUDE(cmake/cpack.cmake)
 INCLUDE(cmake/eigen.cmake)
 
@@ -15,6 +15,7 @@ SET(CXX_DISABLE_WERROR True)
 SETUP_PROJECT()
 
 option(PYTHON_BINDING "Generate python binding." ON)
+option(UNIT_TESTS "Generate unit tests." ON)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++0x -pedantic")
 
@@ -30,7 +31,10 @@ ADD_REQUIRED_DEPENDENCY("SpaceVecAlg")
 # 
 
 add_subdirectory(src)
-add_subdirectory(tests)
+
+if(${UNIT_TESTS})
+	add_subdirectory(tests)
+endif()
 
 if(${PYTHON_BINDING})
   add_subdirectory(binding/python)
