Factorize a little bit AlgoTest.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,8 +7,10 @@ SEARCH_FOR_BOOST()
 include_directories("${PROJECT_SOURCE_DIR}/src")
 include_directories(${Boost_INCLUDE_DIRS})
 
+set(HEADERS XYZarm.h XYZSarm.h)
+
 macro(addUnitTest name)
-  add_executable(${name}  ${name}.cpp)
+  add_executable(${name}  ${name}.cpp ${HEADERS})
   target_link_libraries(${name} ${Boost_LIBRARIES} RBDyn)
   PKG_CONFIG_USE_DEPENDENCY(${name} SpaceVecAlg)
   add_test(${name}Unit ${name})
