Add CentroidalMomentum computation.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,4 +23,5 @@ addUnitTest ("AlgoTest")
 addUnitTest ("JacobianTest")
 addUnitTest ("DynamicsTest")
 addUnitTest ("CoMTest")
+addUnitTest ("MomentumTest")
 
