--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ SETUP_PROJECT()
 
 option(PYTHON_BINDING "Generate python binding." ON)
 option(UNIT_TESTS "Generate unit tests." ON)
+option(BENCHMARK "Generate benchmark." OFF)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++0x -pedantic")
 
@@ -32,9 +33,7 @@ ADD_REQUIRED_DEPENDENCY("SpaceVecAlg")
 
 add_subdirectory(src)
 
-if(${UNIT_TESTS})
-	add_subdirectory(tests)
-endif()
+add_subdirectory(tests)
 
 if(${PYTHON_BINDING})
   add_subdirectory(binding/python)
