--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,16 +10,20 @@ include_directories(${Boost_INCLUDE_DIRS})
 set(HEADERS XYZarm.h XYZSarm.h Tree30Dof.h)
 
 macro(addUnitTest name)
-  add_executable(${name}  ${name}.cpp ${HEADERS})
-  target_link_libraries(${name} ${Boost_LIBRARIES} RBDyn)
-  PKG_CONFIG_USE_DEPENDENCY(${name} SpaceVecAlg)
-  add_test(${name}Unit ${name})
+  if(${UNIT_TESTS})
+    add_executable(${name} ${name}.cpp ${HEADERS})
+    target_link_libraries(${name} ${Boost_LIBRARIES} RBDyn)
+    PKG_CONFIG_USE_DEPENDENCY(${name} SpaceVecAlg)
+    add_test(${name}Unit ${name})
+  endif()
 endmacro(addUnitTest)
 
 macro(addBenchmark name)
-  add_executable(${name}  ${name}.cpp ${HEADERS})
-  target_link_libraries(${name} ${Boost_LIBRARIES} RBDyn)
-  PKG_CONFIG_USE_DEPENDENCY(${name} SpaceVecAlg)
+  if(${BENCHMARK})
+    add_executable(${name} ${name}.cpp ${HEADERS})
+    target_link_libraries(${name} ${Boost_LIBRARIES} RBDyn)
+    PKG_CONFIG_USE_DEPENDENCY(${name} SpaceVecAlg)
+  endif()
 endmacro(addBenchmark)
 
 addUnitTest("BodyTest")
