--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: cpp
-compiler: gcc
+compiler:
+  - gcc
+  - clang
 env:
   global:
   - APT_DEPENDENCIES="doxygen doxygen-latex libboost1.48-all-dev"
@@ -25,4 +27,6 @@ before_install:
   - curDir=`pwd`; cd "$build_dir"; wget https://pybindgen.googlecode.com/files/pybindgen-0.16.0.tar.bz2; tar -xvjf ./pybindgen-0.16.0.tar.bz2; cd pybindgen-0.16.0; ./waf configure; ./waf; sudo ./waf install; cd $curDir
   - ./.travis/dependencies/eigen-3.2
   - ./.travis/run  before_install
-
+matrix:
+  allow_failures:
+    - compiler: clang
