--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(SOURCES MultiBodyGraph.cpp MultiBody.cpp MultiBodyConfig.cpp
-  FK.cpp FV.cpp FA.cpp Jacobian.cpp ID.cpp FD.cpp EulerIntegration.cpp CoM.cpp
+	FK.cpp FV.cpp FA.cpp Jacobian.cpp ID.cpp FD.cpp IK.cpp EulerIntegration.cpp CoM.cpp
   Momentum.cpp ZMP.cpp IDIM.cpp VisServo.cpp)
 set(HEADERS Body.h Joint.h MultiBodyGraph.h MultiBody.h MultiBodyConfig.h
-  FK.h FV.h FA.h Jacobian.h ID.h FD.h EulerIntegration.h CoM.h
+	FK.h FV.h FA.h Jacobian.h ID.h FD.h IK.h EulerIntegration.h CoM.h
   Momentum.h ZMP.h IDIM.h VisServo.h)
 
 add_library(RBDyn SHARED ${SOURCES} ${HEADERS})
