--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -38,3 +38,8 @@ addUnitTest("IDIMTest")
 
 addBenchmark("JacobianBench")
 addBenchmark("DynamicsBench")
+
+set(PYTHON_TEST_COMMAND "${PYTHON_EXECUTABLE}")
+configure_file(rbd_pickle_test.py ${CMAKE_CURRENT_BINARY_DIR}/rbd_pickle_test.py)
+add_test(rbdPickleTestUnit ${PYTHON_TEST_COMMAND}
+  "${CMAKE_CURRENT_BINARY_DIR}/rbd_pickle_test.py")
