tests: use Boost.Test's shared library

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,8 @@
 ENABLE_TESTING()
 
-set(Boost_USE_STATIC_LIBS ON)
 set(BOOST_COMPONENTS unit_test_framework timer system)
 SEARCH_FOR_BOOST()
+add_definitions(-DBOOST_TEST_DYN_LINK)
 
 include_directories("${PROJECT_SOURCE_DIR}/src")
 include_directories(${Boost_INCLUDE_DIRS})
