Implement Inverse Statics algorithm
Conflicts:
	AUTHORS
	CMakeLists.txt
	src/CMakeLists.txt
	src/Joint.h

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,10 +21,11 @@ set(BOOST_COMPONENTS unit_test_framework timer system)
 SEARCH_FOR_BOOST()
 add_definitions(-DBOOST_TEST_DYN_LINK)
 
+add_definitions(-DTESTS_DATA_DIR="${PROJECT_SOURCE_DIR}/tests")
 include_directories("${PROJECT_SOURCE_DIR}/src")
 include_directories(${Boost_INCLUDE_DIRS})
 
-set(HEADERS XYZarm.h XYZSarm.h Tree30Dof.h SSSarm.h)
+set(HEADERS XXXarm.h XYZarm.h XYZSarm.h Tree30Dof.h SSSarm.h)
 
 macro(addUnitTest name)
   if(${UNIT_TESTS})
@@ -52,6 +53,7 @@ addUnitTest("DynamicsTest")
 addUnitTest("CoMTest")
 addUnitTest("MomentumTest")
 addUnitTest("IDIMTest")
+addUnitTest("InverseStaticsTest")
 
 addBenchmark("JacobianBench")
 addBenchmark("DynamicsBench")
