--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,10 +16,10 @@
 # along with RBDyn.  If not, see <http://www.gnu.org/licenses/>.
 
 set(SOURCES MultiBodyGraph.cpp MultiBody.cpp MultiBodyConfig.cpp
-	FK.cpp FV.cpp FA.cpp Jacobian.cpp ID.cpp FD.cpp IK.cpp EulerIntegration.cpp CoM.cpp
-  Momentum.cpp ZMP.cpp IDIM.cpp VisServo.cpp)
+  FK.cpp FV.cpp FA.cpp Jacobian.cpp ID.cpp IK.cpp IS.cpp FD.cpp EulerIntegration.cpp
+  CoM.cpp Momentum.cpp ZMP.cpp IDIM.cpp VisServo.cpp)
 set(HEADERS Body.h Joint.h MultiBodyGraph.h MultiBody.h MultiBodyConfig.h
-	FK.h FV.h FA.h Jacobian.h ID.h FD.h IK.h EulerIntegration.h CoM.h
+  FK.h FV.h FA.h Jacobian.h ID.h IK.h IS.h FD.h EulerIntegration.h CoM.h
   Momentum.h ZMP.h IDIM.h VisServo.h)
 
 add_library(RBDyn SHARED ${SOURCES} ${HEADERS})
