--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,84 +4,34 @@ clone_folder: C:/devel-src/RBDyn
 init:
 - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 environment:
-  CMAKE_INSTALL_PREFIX: C:/devel
+  CI_OS_NAME: win32
+  CI_TOOL: appveyor
+  CHOCO_DEPENDENCIES: "doxygen.portable"
+  GIT_DEPENDENCIES: "gergondet/SpaceVecAlg#topic/Win32"
+# Should be the same as clone_folder
   PROJECT_SOURCE_DIR: C:/devel-src/RBDyn
+# Do not tinker with the variables below unless you know what you are doing
+  SOURCE_FOLDER: C:\devel-src
+  CMAKE_INSTALL_PREFIX: C:/devel
   PATH: C:/devel/bin;C:\Libraries\boost_1_59_0\lib64-msvc-14.0;%PATH%
   PKG_CONFIG_PATH: C:/devel/lib/pkgconfig
   BOOST_ROOT: C:\Libraries\boost_1_59_0
   BOOST_LIBRARYDIR: C:\Libraries\boost_1_59_0\lib64-msvc-14.0
-  SANE_CMAKE_INSTALL_PREFIX: C:\devel
-  SANE_PKG_CONFIG_PATH: C:\devel\lib\pkgconfig
-before_build:
-- cmd: >-
-    md C:\devel
+build_script:
+- ps: >-
+    Set-PSDebug -Trace 2
 
-    if not exist C:\devel-src (md C:\devel-src)
+    . ./.travis/functions.ps1
 
-    cd C:\devel-src
+    setup_build
 
-    choco install doxygen.portable
+    ./.travis/dependencies/eigen-3.2.ps1
 
-    appveyor DownloadFile http://ftp.gnome.org/pub/gnome/binaries/win32/glib/2.28/glib_2.28.8-1_win32.zip
+    install_dependencies
 
-    appveyor DownloadFile http://ftp.gnome.org/pub/gnome/binaries/win32/dependencies/pkg-config_0.26-1_win32.zip
-
-    appveyor DownloadFile http://ftp.gnome.org/pub/gnome/binaries/win32/dependencies/gettext-runtime_0.18.1.1-2_win32.zip
-
-    7z x glib_2.28.8-1_win32.zip -oC:\devel -r
-
-    7z x pkg-config_0.26-1_win32.zip -oC:\devel -r
-
-    7z x gettext-runtime_0.18.1.1-2_win32.zip -oC:\devel -r
-
-    appveyor DownloadFile https://bitbucket.org/eigen/eigen/get/3.2.7.zip
-
-    7z x 3.2.7.zip -oC:\devel-src\eigen -r
-
-    cd C:\devel-src\eigen\eigen-eigen-b30b87236a1b
-
-    md build
-
-    cd build
-
-    cmake -G "Visual Studio 14 2015 Win64" -DCMAKE_INSTALL_PREFIX=%CMAKE_INSTALL_PREFIX% ../
-
-    msbuild INSTALL.vcxproj
-
-    if not exist %SANE_PKG_CONFIG_PATH%\ ( md %SANE_PKG_CONFIG_PATH% )
-
-    set EIGEN3_PC_FILE=%SANE_PKG_CONFIG_PATH%\eigen3.pc
-
-    echo Name: Eigen3 > %EIGEN3_PC_FILE%
-
-    echo Description: A C++ template library for linear algebra: vectors, matrices, and related algorithms >> %EIGEN3_PC_FILE%
-
-    echo Requires: >> %EIGEN3_PC_FILE%
-
-    echo Version: 3.2.7 >> %EIGEN3_PC_FILE%
-
-    echo Libs: >> %EIGEN3_PC_FILE%
-
-    echo Cflags: -I%CMAKE_INSTALL_PREFIX%/include/eigen3 >> %EIGEN3_PC_FILE%
-
-    cd C:/devel-src
-
-    git clone -b topic/Win32 https://github.com/gergondet/SpaceVecAlg
-
-    cd SpaceVecAlg
-
-    cmake -G "Visual Studio 14 2015 Win64" -DCMAKE_INSTALL_PREFIX=%CMAKE_INSTALL_PREFIX% -DPYTHON_BINDING=OFF
-
-    msbuild INSTALL.vcxproj
-
-    cd %PROJECT_SOURCE_DIR%
-
-    cmake -G "Visual Studio 14 2015 Win64" -DCMAKE_INSTALL_PREFIX=%CMAKE_INSTALL_PREFIX% -DPYTHON_BINDING=OFF
-build:
-  project: INSTALL.vcxproj
-  verbosity: minimal
+    build_project
 test_script:
 - cmd: >-
-    cd %PROJECT_SOURCE_DIR%
+    cd %PROJECT_SOURCE_DIR%/build
 
     ctest
