--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,20 @@
+# Copyright 2012-2016 CNRS-UM LIRMM, CNRS-AIST JRL
+#
+# This file is part of RBDyn.
+#
+# RBDyn is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Lesser General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# RBDyn is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Lesser General Public License for more details.
+#
+# You should have received a copy of the GNU Lesser General Public License
+# along with RBDyn.  If not, see <http://www.gnu.org/licenses/>.
+
 cmake_minimum_required(VERSION 2.8)
 
 INCLUDE(cmake/base.cmake)
@@ -14,7 +31,7 @@ SET(CXX_DISABLE_WERROR True)
 
 SETUP_PROJECT()
 
-option(PYTHON_BINDING "Generate python binding." ON)
+option(PYTHON_BINDING "Generate python binding." OFF)
 option(UNIT_TESTS "Generate unit tests." ON)
 option(BENCHMARKS "Generate benchmarks." OFF)
 
