--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,6 +33,8 @@ macro(addUnitTest name)
     target_link_libraries(${name} ${Boost_LIBRARIES} RBDyn)
     PKG_CONFIG_USE_DEPENDENCY(${name} SpaceVecAlg)
     add_test(${name}Unit ${name})
+	# Adding a project configuration file (for MSVC only)
+    GENERATE_MSVC_DOT_USER_FILE(${name})
   endif()
 endmacro(addUnitTest)
 
@@ -41,6 +43,8 @@ macro(addBenchmark name)
     add_executable(${name} ${name}.cpp ${HEADERS})
     target_link_libraries(${name} ${Boost_LIBRARIES} RBDyn)
     PKG_CONFIG_USE_DEPENDENCY(${name} SpaceVecAlg)
+	# Adding a project configuration file (for MSVC only)
+    GENERATE_MSVC_DOT_USER_FILE(${name})
   endif()
 endmacro(addBenchmark)
 
