--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,41 @@
-*.pyc
-*~
+# Clang code formatting file
 .clang-format
+
+# Temporary Backup files
+*~
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+*.pyc
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran Module files
+*.mod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# Build Folder
+build/*
+xcodebuild/*
+build2/*
+xcodebuild2/*
