Using acceleration in the integration of joint position.
  - Still need to be done for planar joints.
  - The integration for the translation part of a free joint seems (as for previous version) not coherent.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -69,6 +69,7 @@ addUnitTest("CoMTest")
 addUnitTest("MomentumTest")
 addUnitTest("IDIMTest")
 addUnitTest("InverseStaticsTest")
+addUnitTest("IntegrationTest")
 
 addBenchmark("JacobianBench")
 addBenchmark("DynamicsBench")
