[CI] Setup a Python 3.4 CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,14 @@ compiler:
 - clang
 env:
   global:
-  - APT_DEPENDENCIES="doxygen doxygen-latex libboost-all-dev python-numpy"
+  - APT_DEPENDENCIES="doxygen doxygen-latex libboost-all-dev"
   - GIT_DEPENDENCIES="jrl-umi3218/SpaceVecAlg#topic/Cython"
   - GH_USERNAME=gergondet
   - GH_REPO=jrl-umi3218/RBDyn
   - secure: FCe7ktcmBJWgEFsCBnG1QfIhkgNKM3uyRMS9mXiY8hfGQ9KGj/9X4qebUmfZ1ay6Rw2B22FXpRiJk2GmsHxo1RZH3f27b6F1mWz25RgJGX986k2nPChCshf5gORfMI5BKksyXFzp24sXBLcYKGz/xrOioSUY1wPJ3JZ7r7kDEV4=
+  matrix:
+    - USE_PYTHON34=false
+    - USE_PYTHON34=true
 notifications:
   slack:
     rooms:
@@ -36,6 +39,7 @@ script: ./.travis/run build
 after_success: ./.travis/run after_success
 after_failure: ./.travis/run after_failure
 before_install:
+- if [ $USE_PYTHON34 = true ]; then pushd .; pip install virtualenv; mkdir -p /tmp/_ci/virtualenv; virtualenv -p python3.4 3.4; source 3.4/bin/activate; popd; fi
 - ./.travis/dependencies/eigen-3.2
 - pushd .
 - cd /tmp/_ci/build
