--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ compiler:
 env:
   global:
   - APT_DEPENDENCIES="doxygen doxygen-latex libboost-all-dev"
-  - GIT_DEPENDENCIES="jrl-umi3218/SpaceVecAlg#topic/Cython"
+  - GIT_DEPENDENCIES="jrl-umi3218/Eigen3ToPython jrl-umi3218/SpaceVecAlg"
   - GH_USERNAME=gergondet
   - GH_REPO=jrl-umi3218/RBDyn
   - secure: FCe7ktcmBJWgEFsCBnG1QfIhkgNKM3uyRMS9mXiY8hfGQ9KGj/9X4qebUmfZ1ay6Rw2B22FXpRiJk2GmsHxo1RZH3f27b6F1mWz25RgJGX986k2nPChCshf5gORfMI5BKksyXFzp24sXBLcYKGz/xrOioSUY1wPJ3JZ7r7kDEV4=
@@ -41,18 +41,6 @@ after_failure: ./.travis/run after_failure
 before_install:
 - if [ $USE_PYTHON34 = true ]; then pushd .; pip install virtualenv; mkdir -p /tmp/_ci/virtualenv; virtualenv -p python3.4 3.4; source 3.4/bin/activate; popd; fi
 - ./.travis/dependencies/eigen-3.2
-- pushd .
-- cd /tmp/_ci/build
-- export install_dir=/tmp/_ci/install
-- export OLD_PKG_CONFIG_PATH=$PKG_CONFIG_PATH
-- export PKG_CONFIG_PATH="$install_dir/lib/pkgconfig:$install_dir/share/pkgconfig:$PKG_CONFIG_PATH"
-- git clone -b topic/Cython https://github.com/jrl-umi3218/Eigen3ToPython
-- cd Eigen3ToPython
-- pip install -r requirements.txt
-- pip install . -vvv
-- export PKG_CONFIG_PATH=$OLD_PKG_CONFIG_PATH
-- unset install_dir
-- popd
 - ./.travis/run  before_install
 matrix:
   allow_failures:
