Port Python bindings to Cython (#36)
* Switch to Cython bindings

* [ci] Adapt travis.yml to changes

* [ci] Prevent install directory removal

* Move wrapper functions to private pxd

* Update copyright

* Fix pickling and unit tests

* Fixes for Python 3

* [CI] Setup a Python 3.4 CI build

* Add an option to install Python bindings to user space

* Fix a few more Python 3 string issues

* Use Eigen3ToPython and SVA master

* Squashed '.travis/' changes from 7a40a28..bad6dbd

bad6dbd Allow to specify pybindgen install prefix
3f214dd Update pybindgen archive url
f13ddca Use a common script for Eigen 3.2 and 3.3
0d26976 Add a script for Eigen 3.3
027bca4 Update Eigen 3.2 version to 3.2.10
629f539 ipopt: update to 3.12.6
87f7ee7 eigen: update to 3.2.9
a0c7e47 common.sh: fix OS X environment
811fbd6 Merge pull request #31 from francois-keith/dev4
4c8a74c Hard code the path to git.exe
8c1c5f5 Build in debug.
89d0b39 Add some intermediary checks.
c2f4554 [AppVeyor] Add a method to run the unit tests.
e59a441 Correct choco install.
af4c533 Merge pull request #30 from jcarpent/master
00d90b0 Fix bug in common.sh
9da636c Merge pull request #29 from jcarpent/master
dd15db5 Use CI_BRANCH instead of TRAVIS_BRANCH
448cc3f Set DO_*_ON_BRANCH to the current branch if they are not yet defined
c5ed776 [Cppcheck] Do ccpcheck only on specified branches
3c52bd1 [Coverage] Do coverage only on specified branches
2a03b5b [AppVeyor] Support for projects with fortran subdirectory
b819e8a dependencies: add missing -qq for apt-get
9b94f1a dependencies/ipopt: install dependencies with apt
7b21446 dependencies: add script to install Ipopt from source
211e163 Merge pull request #28 from gergondet/topic/Win32
8f7b969 [Win32] Add AppVeyor support
REVERT: 7a40a28 Update submodule before building
REVERT: bc0a72e [Win32] Solve an issue in functions
REVERT: 99d898d [Win32] Add AppVeyor support

git-subtree-dir: .travis
git-subtree-split: bad6db

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Copyright 2012-2016 CNRS-UM LIRMM, CNRS-AIST JRL
+# Copyright 2012-2017 CNRS-UM LIRMM, CNRS-AIST JRL
 #
 # This file is part of RBDyn.
 #
@@ -19,24 +19,29 @@ sudo: required
 dist: trusty
 language: cpp
 compiler:
-  - gcc
-  - clang
+- gcc
+- clang
 env:
   global:
-  - APT_DEPENDENCIES="doxygen doxygen-latex libboost-all-dev python-numpy"
-  - GIT_DEPENDENCIES="jrl-umi3218/SpaceVecAlg"
+  - APT_DEPENDENCIES="doxygen doxygen-latex libboost-all-dev"
+  - GIT_DEPENDENCIES="jrl-umi3218/Eigen3ToPython jrl-umi3218/SpaceVecAlg"
   - GH_USERNAME=gergondet
   - GH_REPO=jrl-umi3218/RBDyn
-  - secure: "FCe7ktcmBJWgEFsCBnG1QfIhkgNKM3uyRMS9mXiY8hfGQ9KGj/9X4qebUmfZ1ay6Rw2B22FXpRiJk2GmsHxo1RZH3f27b6F1mWz25RgJGX986k2nPChCshf5gORfMI5BKksyXFzp24sXBLcYKGz/xrOioSUY1wPJ3JZ7r7kDEV4="
+  - secure: FCe7ktcmBJWgEFsCBnG1QfIhkgNKM3uyRMS9mXiY8hfGQ9KGj/9X4qebUmfZ1ay6Rw2B22FXpRiJk2GmsHxo1RZH3f27b6F1mWz25RgJGX986k2nPChCshf5gORfMI5BKksyXFzp24sXBLcYKGz/xrOioSUY1wPJ3JZ7r7kDEV4=
+  matrix:
+    - USE_PYTHON34=false
+    - USE_PYTHON34=true
 notifications:
-  email:
-  - pierre.gergondet@gmail.com
+  slack:
+    rooms:
+      secure: N2C/Q9nr/TNjVE1UIRhT7gXN6bfJCe1nH7FIMA0RrANsdGkGsJHhuJsiOs8cUE7ozRFSiZ/ewMSADqItfwwp692pI1wp2y0X8wxRMB3pmo01Owv7on6NgLHXY4Br6peCSwGem3MaywcN8QaBlPxNVXFTfGi39GDvA8szLkCGHGw=
 script: ./.travis/run build
 after_success: ./.travis/run after_success
 after_failure: ./.travis/run after_failure
 before_install:
-  - ./.travis/dependencies/eigen-3.2
-  - ./.travis/run  before_install
+- if [ $USE_PYTHON34 = true ]; then pushd .; pip install virtualenv; mkdir -p /tmp/_ci/virtualenv; virtualenv -p python3.4 3.4; source 3.4/bin/activate; popd; fi
+- ./.travis/dependencies/eigen-3.2
+- ./.travis/run  before_install
 matrix:
   allow_failures:
-    - compiler: clang
+  - compiler: clang
