--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,10 +16,10 @@
 # along with RBDyn.  If not, see <http://www.gnu.org/licenses/>.
 
 set(SOURCES MultiBodyGraph.cpp MultiBody.cpp MultiBodyConfig.cpp
-  FK.cpp FV.cpp FA.cpp Jacobian.cpp ID.cpp IK.cpp IS.cpp FD.cpp EulerIntegration.cpp
+  FK.cpp FV.cpp FA.cpp Jacobian.cpp ID.cpp IK.cpp IS.cpp FD.cpp Coriolis.cpp EulerIntegration.cpp
   CoM.cpp Momentum.cpp ZMP.cpp IDIM.cpp VisServo.cpp)
 set(HEADERS RBDyn/Body.h RBDyn/Joint.h RBDyn/MultiBodyGraph.h RBDyn/MultiBody.h RBDyn/MultiBodyConfig.h
-  RBDyn/FK.h RBDyn/FV.h RBDyn/FA.h RBDyn/Jacobian.h RBDyn/ID.h RBDyn/IK.h RBDyn/IS.h RBDyn/FD.h RBDyn/EulerIntegration.h RBDyn/CoM.h
+  RBDyn/FK.h RBDyn/FV.h RBDyn/FA.h RBDyn/Jacobian.h RBDyn/ID.h RBDyn/IK.h RBDyn/IS.h RBDyn/FD.h RBDyn/Coriolis.h RBDyn/EulerIntegration.h RBDyn/CoM.h
   RBDyn/Momentum.h RBDyn/ZMP.h RBDyn/IDIM.h RBDyn/VisServo.h RBDyn/util.hh RBDyn/util.hxx)
 
 add_library(RBDyn SHARED ${SOURCES} ${HEADERS})
