--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ binding/python/rbdyn/rbdyn.cpp
 binding/python/rbdyn/rbdyn.so
 binding/python/rbdyn/__init__.py
 binding/python/setup.py
+*.swp
+CMakeLists.txt.user*
+*.autosave
+build/
