Add coriolis matrix computation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -70,6 +70,8 @@ addUnitTest("MomentumTest")
 addUnitTest("IDIMTest")
 addUnitTest("InverseStaticsTest")
 addUnitTest("IntegrationTest")
+addUnitTest("ExpandTest")
+addUnitTest("CoriolisTest")
 
 addBenchmark("JacobianBench")
 addBenchmark("DynamicsBench")
