--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,8 @@ env:
   matrix:
     - USE_PYTHON34=false
     - USE_PYTHON34=true
+    - CMAKE_BUILD_TYPE=RelWithDebInfo
+    - CMAKE_BUILD_TYPE=Debug
 notifications:
   slack:
     rooms:
@@ -42,10 +44,8 @@ script: ./.travis/run build
 after_success: ./.travis/run after_success
 after_failure: ./.travis/run after_failure
 before_install:
+- export CMAKE_ADDITIONAL_OPTIONS="${CMAKE_ADDITIONAL_OPTIONS} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
 - if [ $USE_PYTHON34 = true ]; then pushd .; pip install virtualenv; mkdir -p /tmp/_ci/virtualenv; virtualenv -p python3.4 3.4; source 3.4/bin/activate; popd; fi
 - if [ $USE_PYTHON34 = false ]; then export CMAKE_ADDITIONAL_OPTIONS="-DPYTHON_BINDING_USER_INSTALL:BOOL=ON"; fi
 - ./.travis/dependencies/eigen-3.2
 - ./.travis/run  before_install
-matrix:
-  allow_failures:
-  - compiler: clang
